# flask-google-jwt

./: README.md  pyproject.toml
flask_google_jwt/: __init__.py  plugin.py
